# agentic_assistants

./: .gitignore  DEVELOPMENT.md  Dockerfile  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TROUBLESHOOTING.md  backend.log.err  docker-compose.yml  env.example  pyproject.toml  webui.log.err
.github/: copilot-instructions.md
.index/: README.md
.index/areas/: infra_docker_k8s.md  python_data_observability.md  python_engine.md  python_indexing.md  python_integrations.md  python_knowledge.md  python_kubernetes.md  python_pipelines.md  python_rl.md  python_server.md  python_serving.md  python_training.md  python_vectordb.md  webui_app.md
.index/chunks/: 000655786f3f_0.md  001dddf95f6a_0.md  001dddf95f6a_1.md  001dddf95f6a_2.md  001dddf95f6a_3.md  001dddf95f6a_4.md  001dddf95f6a_5.md  001dddf95f6a_6.md  0020829a0d7d_0.md  0027146d2d2d_0.md  002b177759ac_0.md  002b177759ac_1.md  002b8be312d0_0.md  002b8be312d0_1.md  002b8be312d0_2.md  002b8be312d0_3.md  002b8be312d0_4.md  002b8be312d0_5.md  002b8be312d0_6.md  002d52269050_0.md  002fc1df70d8_0.md  002fc1df70d8_1.md  002fc1df70d8_2.md  00318aa75cad_0.md  0034932ab917_0.md  0043008289d9_0.md  0043008289d9_1.md  0043008289d9_2.md  0043008289d9_3.md  0043008289d9_4.md  0043008289d9_5.md  0043008289d9_6.md  0043db8cea50_0.md  004b80fac34f_0.md  0058f55b568e_0.md  0058f55b568e_1.md  0058f55b568e_2.md  0061b6bd3a21_0.md  0061b6bd3a21_1.md  0069d0b55179_0.md  (+60504 more)
.index/context/: api-surface.md  architecture.md  ollama-assistant.md  patterns.md
.index/cursor/: context.md  rules.md
.index/github/: CONTEXT.md  file-index.json
.index/surfaces/: cli_commands.json  cli_commands.md  rest_endpoints.json  rest_endpoints.md  webui_routes.json  webui_routes.md
.index/symbols/: ts_symbols.json
conf/base/: catalog.yaml  dagster.yaml  globals.yaml  parameters.yaml  workspace.yaml
conf/docker/: workspace.yaml
conf/local/: credentials.yaml
docker/: Dockerfile.api  Dockerfile.dagster  Dockerfile.ide  Dockerfile.lab  dagster-entrypoint.sh  otel-collector-config.yaml
docs/: adapters.md  api_reference.md  architecture.md  assistant_deployments.md  cli_reference.md  configuration.md  control_panel_webui.md  core-foundation.md  dagster-integration.md  data_observability.md  framework_assistant.md  index.md  indexing_and_context.md  infrastructure.md  installation.md  knowledge_bases.md  learning_path.md  llm_training.md  model_serving.md  observability.md  ollama_finetuning.md  pipelines.md  rl_tuning.md  server.md  usage_analytics.md
docs/cookbook/: index.md
examples/: context_loading_demo.py  crewai_research_team.py  langgraph_workflow.py  simple_ollama_chat.py
examples/core/: README.md  base_models_and_dto.py  clients_and_utils.py  repository_service.py  state_machine_and_serialization.py
examples/cybersec-hub/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  config.yaml
examples/global-knowledgebase-starter/: README.md  config.yaml  repos.yaml
examples/local-coding-assistant/: README.md  __init__.py  config.yaml
examples/nemotron-coding-assistant/: README.md  __init__.py  config.yaml
examples/starters/: README.md  starter_manifest.yaml
frontend/: .dockerignore  package.json  tsconfig.json
frontend/browser-app/: gen-webpack.config.js  gen-webpack.node.config.js  package.json
frontend/browser-app-lite/: gen-webpack.config.js  gen-webpack.node.config.js
k8s/: configmap.yaml  kustomization.yaml  namespace.yaml
k8s/agentic/: deployment.yaml  ingress.yaml
k8s/cronjobs/: data-sync-cronjob.yaml  global-repo-ingestion.yaml
k8s/dagster/: dagster-deployment.yaml
k8s/mlflow/: mlflow-deployment.yaml
k8s/otel/: jaeger-deployment.yaml  otel-collector-configmap.yaml  otel-collector-deployment.yaml
k8s/postgres/: postgres-deployment.yaml
k8s/prefect/: prefect-deployment.yaml
k8s/redis/: redis-configmap.yaml  redis-deployment.yaml
lab/: jupyter_lab_config.py  requirements.txt
lab/extensions/jupyterlab-starters/: package.json  pyproject.toml  tsconfig.json
lab/extensions/jupyterlab-starters/jupyterlab_starters/: __init__.py
lab/extensions/jupyterlab-starters/src/: index.ts
lab/extensions/jupyterlab-starters/style/: index.css
notebooks/: 01_getting_started.ipynb  02_crewai_basics.ipynb  03_langgraph_basics.ipynb  04_mlflow_experiments.ipynb  05_huggingface_basics.ipynb  06_smolagents_intro.ipynb  07_langchain_agents.ipynb  08_langgraph_advanced.ipynb  09_llamaindex_rag.ipynb  10_multiagent_evaluation.ipynb  11_repository_indexing_crew.ipynb  12_kedro_pipelines.ipynb  13_nemotron_nano_workflow.ipynb  14_multilevel_storage_basics.ipynb  15_scoped_vector_search.ipynb  16_document_augmentation_basics.ipynb  17_llm_document_augmentation.ipynb  18_qa_pair_generation.ipynb  19_hybrid_cache_patterns.ipynb  20_persistent_memory_patterns.ipynb  21_repo_intel_ingestion.ipynb  22_lancedb_chroma_benchmark.ipynb  23_rag_evaluation_playground.ipynb  24_local_rag_api_workflow.ipynb  25_end_to_end_local_rag_starter.ipynb  26_pydantic_advanced_models.ipynb  27_sqlalchemy_modern_orm.ipynb  28_pydantic_ai_agents.ipynb  29_langgraph_state_machines.ipynb  30_msgspec_performance.ipynb  31_repository_service_patterns.ipynb  32_dto_api_boundaries.ipynb  33_observability_logfire.ipynb  34_gradient_boosting_trio.ipynb  35_tensorflow_keras_intro.ipynb  36_unsloth_finetuning.ipynb  37_langchain_rag_chains.ipynb  38_temporal_durable_agents.ipynb  39_design_patterns_ml.ipynb  40_advanced_clustering.ipynb  (+6 more)
py11_venv/: pyvenv.cfg
py11_venv/Scripts/: activate  (+6 more)
scripts/: README.md  agentic.sh  generate_index.py  migrate_to_postgres.py  run_repository_indexer.py  start-dev.ps1  start-dev.sh  start-enhanced.ps1  start-lab.ps1  start-lab.sh  start-webui.ps1  start-webui.sh  start.ps1  start.sh  stop-dev.ps1  stop-dev.sh  stop.ps1  stop.sh
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_hybrid_llm_rollout.py  test_mlflow_tracker.py  test_ollama.py  test_templates_catalog.py  test_templates_cli.py  test_testing_api.py
theia-ide/: package.json
webui/: README.md  next.config.ts  package-lock.json  package.json
(+576 files in other folders)
