[tool.poetry]
name = "agentic-assistants"
version = "0.1.0"
description = "A local framework for experimenting with multi-agent libraries, MLOps and LLMOps tooling"
authors = ["Julian Wiley"]
license = "MIT"
readme = "README.md"
packages = [{include = "agentic_assistants", from = "src"}]

[tool.poetry.scripts]
agentic = "agentic_assistants.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.1"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
httpx = "^0.27"
rich = "^13.0"
pyyaml = "^6.0"

# MLOps
mlflow = "^2.10"

# Telemetry
opentelemetry-api = "^1.22"
opentelemetry-sdk = "^1.22"
opentelemetry-exporter-otlp = "^1.22"
opentelemetry-instrumentation-httpx = "^0.43b0"

# Agent Frameworks
crewai = "^0.80"
langchain = "~0.2.16"
langgraph = "^0.2"
langchain-ollama = "^0.1"

# Additional Agent Frameworks (optional)
pyautogen = {version = "^0.2", optional = true}
agno = {version = "^1.0", optional = true}
langflow = {version = "^1.0", optional = true}
prefect = {version = "^3.0", optional = true}

# Model Conversion (optional)
llama-cpp-python = {version = "^0.2", optional = true}

# Notebooks
jupyter = "^1.0"
ipykernel = "^6.0"

# Data Layer
pyarrow = "^15.0"
polars = "^0.20"

# Kedro-inspired Data Engineering
omegaconf = "^2.3"
fsspec = "^2024.0"
pluggy = "^1.3"
networkx = "^3.2"
pandas = "^2.0"

# Vector Databases
lancedb = "^0.5"
chromadb = "^0.5"

# LlamaIndex
llama-index = "^0.10"
llama-index-embeddings-ollama = "^0.1"

# Server
fastapi = "^0.109"
uvicorn = "^0.27"
mcp = "^1.0"

# Kubernetes & Cloud Infrastructure
kubernetes = "^31.0"
minio = "^7.2"

# Utilities
pathspec = "^0.12"
jinja2 = "^3.1"

# LLM Training (optional)
trl = {version = "^0.8", optional = true}
peft = {version = "^0.10", optional = true}
bitsandbytes = {version = "^0.43", optional = true}
accelerate = {version = "^0.27", optional = true}
datasets = {version = "^2.18", optional = true}
safetensors = {version = "^0.4", optional = true}

# HuggingFace
huggingface-hub = "^0.21"
transformers = {version = "^4.40", optional = true}

# RL (optional)
ray = {version = "^2.9", extras = ["rllib"], optional = true}

# Database Drivers (optional)
pymongo = {version = "^4.6", optional = true}
redis = {version = "^5.0", optional = true}
elasticsearch = {version = "^8.12", optional = true}
opensearch-py = {version = "^2.4", optional = true}
google-cloud-bigquery = {version = "^3.17", optional = true}
snowflake-connector-python = {version = "^3.6", optional = true}
sqlalchemy = {version = "^2.0", optional = true}

# Remote Development (optional)
paramiko = {version = "^3.4", optional = true}
gitpython = {version = "^3.1", optional = true}

# Memory & RAG (optional)
mem0ai = {version = "^0.1", optional = true}
sentence-transformers = {version = "^3.0", optional = true}

# Cloud Storage (optional)
boto3 = {version = "^1.34", optional = true}

# Document Processing (optional)
pypdf = {version = "^4.0", optional = true}
python-docx = {version = "^1.1", optional = true}

# OpenAI/Anthropic (optional)
openai = {version = "^1.30", optional = true}
anthropic = {version = "^0.26", optional = true}
cohere = {version = "^5.0", optional = true}

[tool.poetry.extras]
training = ["trl", "peft", "bitsandbytes", "accelerate", "datasets", "safetensors", "transformers"]
rl = ["ray"]
databases = ["pymongo", "redis", "elasticsearch", "opensearch-py", "google-cloud-bigquery", "snowflake-connector-python", "sqlalchemy"]
remote = ["paramiko", "gitpython"]
memory = ["mem0ai", "redis"]
embeddings = ["sentence-transformers"]
cloud = ["boto3"]
documents = ["pypdf", "python-docx"]
llm-providers = ["openai", "anthropic", "cohere"]
coding-assistant = ["mem0ai", "redis", "sentence-transformers", "pypdf", "python-docx", "gitpython"]
assistant = ["pyautogen", "agno", "langflow", "llama-cpp-python", "mem0ai", "sentence-transformers"]
orchestration = ["prefect"]
all = ["trl", "peft", "bitsandbytes", "accelerate", "datasets", "safetensors", "transformers", "ray", "pymongo", "redis", "elasticsearch", "opensearch-py", "google-cloud-bigquery", "snowflake-connector-python", "sqlalchemy", "paramiko", "gitpython", "mem0ai", "sentence-transformers", "boto3", "pypdf", "python-docx", "openai", "anthropic", "cohere", "pyautogen", "agno", "langflow", "llama-cpp-python", "prefect"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
ruff = "^0.2"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

