[tool.poetry]
name = "agentic-assistants"
version = "0.1.0"
description = "A local framework for experimenting with multi-agent libraries, MLOps and LLMOps tooling"
authors = ["Julian Wiley"]
license = "MIT"
readme = "README.md"
packages = [{include = "agentic_assistants", from = "src"}]

[tool.poetry.scripts]
agentic = "agentic_assistants.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.1"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
httpx = ">=0.27"
rich = "^13.0"
pyyaml = "^6.0"

# MLOps
mlflow = "^2.10"

# Telemetry
opentelemetry-api = "^1.22"
opentelemetry-sdk = "^1.22"
opentelemetry-exporter-otlp = "^1.22"
opentelemetry-instrumentation-httpx = ">=0.43b0"

# Agent Frameworks
crewai = ">=0.80,<1.0"
langchain = "^0.3.3"
langgraph = "^0.3"
langchain-ollama = "^0.3"

# Additional Agent Frameworks (optional)
pyautogen = {version = "^0.2", optional = true}
agno = {version = "^1.0", optional = true}
# langflow removed: install separately (e.g. `pipx install langflow`) due to
# irreconcilable cachetools conflict between mlflow (<6) and langflow-base (>=6)
# langflow = {version = "^1.0", optional = true}
prefect = {version = "^2.14.0", optional = true}

# Model Conversion (optional)
llama-cpp-python = {version = "^0.2", optional = true}

# Notebooks
jupyter = "^1.0"
ipykernel = "^6.0"

# Data Layer
pyarrow = "^19.0"
polars = "^0.20"

# Kedro-inspired Data Engineering
omegaconf = "^2.3"
fsspec = "^2024.0"
pluggy = "^1.3"
networkx = "^3.2"
pandas = "^2.0"

# Vector Databases
lancedb = "^0.5"
chromadb = ">=0.5"

# LlamaIndex
llama-index = "^0.10"
llama-index-embeddings-ollama = "^0.1"

# Server
fastapi = ">=0.111,<1.0"
uvicorn = ">=0.30"
mcp = "^1.0"

# Kubernetes & Cloud Infrastructure
kubernetes = "^31.0"
minio = "^7.2"

# Utilities
pathspec = "^0.12"
jinja2 = "^3.1"

# PyTorch (optional)
torch = {version = ">=2.0", optional = true}
torchvision = {version = ">=0.15", optional = true}
torchaudio = {version = ">=2.0", optional = true}

# LLM Training (optional)
trl = {version = "^0.8", optional = true}
peft = {version = "^0.10", optional = true}
bitsandbytes = {version = "^0.43", optional = true}
accelerate = {version = "^0.27", optional = true}
datasets = {version = "^2.18", optional = true}
safetensors = {version = "^0.4", optional = true}
tokenizers = {version = ">=0.19", optional = true}

# HuggingFace
huggingface-hub = "^0.33"
transformers = {version = "^4.40", optional = true}

# RL (optional)
ray = {version = "^2.9", extras = ["rllib"], optional = true}

# Database Drivers (optional)
pymongo = {version = "^4.6", optional = true}
redis = {version = "^5.0", optional = true}
elasticsearch = {version = "^8.12", optional = true}
opensearch-py = {version = "^2.4", optional = true}
google-cloud-bigquery = {version = "^3.17", optional = true}
snowflake-connector-python = {version = "^3.6", optional = true}
sqlalchemy = {version = "^2.0", optional = true}

# PostgreSQL and Supabase
psycopg = {version = "^3.1.0", extras = ["binary", "pool"], optional = true}
asyncpg = {version = "^0.29.0", optional = true}
alembic = {version = "^1.13.0", optional = true}
supabase = {version = "^2.0.0", optional = true}

# Orchestration - Prefect
prefect-kubernetes = {version = "^0.3.0", optional = true}
prefect-docker = {version = "^0.4.0", optional = true}

# Orchestration - Dagster
dagster = {version = "^1.9", optional = true}
dagster-webserver = {version = "^1.9", optional = true}
dagster-postgres = {version = "^0.25", optional = true}
dagster-k8s = {version = "^0.25", optional = true}
dagster-docker = {version = "^0.25", optional = true}

# DataHub Catalog
acryl-datahub = {version = ">=0.14", optional = true}

# Apache Iceberg
pyiceberg = {version = ">=0.8", extras = ["s3"], optional = true}

# dbt
dbt-core = {version = "^1.8", optional = true}
dbt-postgres = {version = "^1.8", optional = true}

# Web scraping and integrations
firecrawl-py = {version = "^1.5", optional = true}
composio-core = {version = "^0.7", optional = true}

# Notebook execution
papermill = {version = "^2.5.0", optional = true}
nbconvert = {version = "^7.16.0", optional = true}

# Remote Development (optional)
paramiko = {version = "^3.4", optional = true}
gitpython = {version = "^3.1", optional = true}

# Memory & RAG (optional)
mem0ai = {version = "^0.1", optional = true}
sentence-transformers = {version = "^3.0", optional = true}

# Cloud Storage (optional)
boto3 = {version = "^1.34", optional = true}

# Document Processing (optional)
pypdf = {version = "^6.4", optional = true}
python-docx = {version = "^1.1", optional = true}

# OpenAI/Anthropic (optional)
openai = {version = "^1.30", optional = true}
anthropic = {version = "^0.52", optional = true}
cohere = {version = "^5.0", optional = true}

[tool.poetry.extras]
pytorch = ["torch", "torchvision", "torchaudio"]
training = ["torch", "trl", "peft", "bitsandbytes", "accelerate", "datasets", "safetensors", "transformers", "tokenizers"]
rl = ["torch", "trl", "ray"]
huggingface = ["huggingface-hub", "transformers", "datasets", "safetensors", "accelerate", "tokenizers"]
databases = ["pymongo", "redis", "elasticsearch", "opensearch-py", "google-cloud-bigquery", "snowflake-connector-python", "sqlalchemy", "psycopg", "asyncpg", "alembic"]
supabase = ["supabase", "psycopg", "asyncpg"]
remote = ["paramiko", "gitpython"]
memory = ["mem0ai", "redis"]
embeddings = ["sentence-transformers"]
cloud = ["boto3"]
documents = ["pypdf", "python-docx"]
llm-providers = ["openai", "anthropic", "cohere"]
coding-assistant = ["mem0ai", "redis", "sentence-transformers", "pypdf", "python-docx", "gitpython"]
assistant = ["pyautogen", "agno", "llama-cpp-python", "mem0ai", "sentence-transformers"]
orchestration = ["prefect", "prefect-kubernetes", "prefect-docker", "dagster", "dagster-webserver", "dagster-postgres", "dagster-k8s", "dagster-docker"]
dagster = ["dagster", "dagster-webserver", "dagster-postgres", "dagster-k8s", "dagster-docker"]
datahub = ["acryl-datahub", "pyiceberg", "dbt-core", "dbt-postgres"]
iceberg = ["pyiceberg"]
dbt = ["dbt-core", "dbt-postgres"]
scraping = ["firecrawl-py", "composio-core"]
notebooks = ["papermill", "nbconvert"]
nemotron = ["torch", "trl", "peft", "bitsandbytes", "accelerate", "datasets", "safetensors", "transformers", "tokenizers", "ray", "huggingface-hub"]
all = ["torch", "torchvision", "torchaudio", "trl", "peft", "bitsandbytes", "accelerate", "datasets", "safetensors", "transformers", "tokenizers", "ray", "pymongo", "redis", "elasticsearch", "opensearch-py", "google-cloud-bigquery", "snowflake-connector-python", "sqlalchemy", "paramiko", "gitpython", "mem0ai", "sentence-transformers", "boto3", "pypdf", "python-docx", "openai", "anthropic", "cohere", "pyautogen", "agno", "llama-cpp-python", "prefect", "prefect-kubernetes", "prefect-docker", "dagster", "dagster-webserver", "dagster-postgres", "dagster-k8s", "dagster-docker", "psycopg", "asyncpg", "alembic", "supabase", "firecrawl-py", "composio-core", "papermill", "nbconvert", "acryl-datahub", "pyiceberg", "dbt-core", "dbt-postgres"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
ruff = "^0.9"
mypy = "^1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

